# addons

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build-ffmpeg.sh  prepare-build.sh
.tx/: config
common/: TranslationsLoader.cpp  TranslationsLoader.h
nsis/: veyon-addons.nsi.in  veyon-extra-plugins.nsi.in
translations/: CMakeLists.txt  addons.ts  addons_ar.ts  addons_bg.ts  addons_ca_ES.ts  addons_cs.ts  addons_de.ts  addons_el.ts  addons_es_ES.ts  addons_et.ts  addons_eu.ts  addons_fr.ts  addons_he.ts  addons_hr.ts  addons_hu.ts  addons_id.ts  addons_it.ts  addons_ja.ts  addons_ka.ts  addons_ko.ts  addons_lt.ts  addons_lv.ts  addons_nl.ts  addons_pl.ts  addons_pt_BR.ts  addons_ru.ts  addons_sk.ts  addons_sl.ts  addons_sr.ts  addons_sv.ts  addons_th.ts  addons_tr.ts  addons_uk.ts  addons_zh_CN.ts  addons_zh_TW.ts  es_ES.ts  he.ts  id.ts  it.ts  lt.ts  (+9 more)
